--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Hi, I'm Zhichang Liu</h1>
         <h4>...call me Michael if you have trouble pronounce my name</h4>
         <div class="resume_btn">
-            <a href="#">Download Resume</a>
+            <a href="Zhichang_Liu_Resume.pdf">Download Resume</a>
         </div>
     </div>
 
