--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="icon">
-        <a href="#"><i class='bx bxl-linkedin'></i></a>
+        <a href="www.linkedin.com/in/zhichang-liu-928172164"><i class='bx bxl-linkedin'></i></a>
     </div>
 </section>
 
