--- a/index.html
+++ b/index.html
@@ -31,6 +31,85 @@
     </div>
 </section>
 
+<section class="about">
+    <h2 class="heading">About Me</h2>
+    <p>Entry-level software developer and data analyst with a global mindset and a staid and rigorous character. Fluent in Mandarin, Japanese, and English. Possesses advanced knowledge of Java, C and SQL along with exceptional problem-solving skills, logical reasoning ability, data analysis skills, and a strong aptitude for learning. Have experience in software development using Android Studio. Comfortable with Agile development methodologies, and familiar with R, JavaScript, HTML, CSS, and visualization using D3.js and Tableau.</p>
+</section>
+
+<section class="education">
+    <h2 class="heading">Education</h2>
+
+    <div class="edu-img">
+        <img src="DAL_LogoHorz_RGB_Gold_Wingtip.png" alt="">
+        <img src="google-data-analytics-certificate.2.png" alt="">
+
+        <div class="edu-text">Bachelor of Computer Science</div>
+    </div>
+</section>
+
+<section class="skills">
+    <h2 class="heading">My Top Skills</h2>
+
+    <div class="skill-row">
+
+        <div class="skill-col">
+            
+            <div class="skill-box">
+                <div class="skill-content">
+
+                    <div class="progress">
+                        <h3>Java <span>Still improving</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>C <span>Don't like it</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>SQL <span>Still improving</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>R <span>Just started</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="skill-col">
+            
+            <div class="skill-box">
+                <div class="skill-content">
+
+                    <div class="progress">
+                        <h3>HTML <span>Still improving</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>CSS <span>Still improving</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>Mandarin <span>Native speeker</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>Japanese <span>Easy for Chinese speakers</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 </body>
 </html>
