--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar">
-    <a class="active" href="#home">Home</a>
+    <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#education">Education</a>
     <a href="#skills">Skills</a>
@@ -17,7 +17,7 @@
     <a href="#contact">Contact</a>
 </nav>
 
-<section class="home">
+<section class="home" id="home">
     <div class="home_content">
         <h1>Hi, I'm Zhichang Liu</h1>
         <h4>...call me Michael if you have trouble pronounce my name</h4>
@@ -31,12 +31,12 @@
     </div>
 </section>
 
-<section class="about">
+<section class="about" id="about">
     <h2 class="heading">About Me</h2>
     <p>Entry-level software developer and data analyst with a global mindset and a staid and rigorous character. Fluent in Mandarin, Japanese, and English. Possesses advanced knowledge of Java, C and SQL along with exceptional problem-solving skills, logical reasoning ability, data analysis skills, and a strong aptitude for learning. Have experience in software development using Android Studio. Comfortable with Agile development methodologies, and familiar with R, JavaScript, HTML, CSS, and visualization using D3.js and Tableau.</p>
 </section>
 
-<section class="education">
+<section class="education" id="education">
     <h2 class="heading">Education</h2>
 
     <div class="edu-img">
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="skills">
+<section class="skills" id="skills">
     <h2 class="heading">My Top Skills</h2>
 
     <div class="skill-row">
@@ -107,6 +107,20 @@
                 </div>
             </div>
         </div>
+    </div>
+</section>
+
+<section class="projects" id="projects">
+    <h2 class="heading">My Projects</h2>
+</section>
+
+<section class="contact" id="contact">
+    <h2 class="heading">Contact Me</h2>
+
+    <div class="contact-info">
+        <i class='bx bx-envelope'><p><a href="mailto:zhichang.liu.michael@outlook.com">zhichang.liu.michael@outlook.com</a></p></i>
+        
+        <i class='bx bx-phone' ><p>+1 (902)- 430 - 7963</p></i>        
     </div>
 </section>
 
