--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
     <h2 class="heading">Education</h2>
 
     <div class="edu-img">
-        <img src="DAL_LogoHorz_RGB_Gold_Wingtip.png" alt="">
-        <img src="google-data-analytics-certificate.2.png" alt="">
+        <div class="img-content">
+            <img src="DAL_LogoHorz_RGB_Gold_Wingtip.png" alt="">
+            <span>Bachelor of Computer Science</span>
+        </div>
 
-        <div class="edu-text">Bachelor of Computer Science</div>
+        <div class="img-content">
+            <img src="google-data-analytics-certificate.2.png" alt="">
+        </div>
     </div>
 </section>
 
@@ -112,6 +116,22 @@
 
 <section class="projects" id="projects">
     <h2 class="heading">My Projects</h2>
+
+    <div class="project-item">
+        <h3>World Data Visualization</h3>
+        <p>A project using D3.js to visualize all kinds of data (GDP, population, etc.)</p>
+
+        <div class="project-btn">
+            <a href="https://kaguyam.github.io/world-data/project.html">More</a>
+        </div>
+
+        <h3>Google Data Analytics Capstone Project</h3>
+        <p>The capstone project conducted to finish the corresponding certificate</p>
+
+        <div class="project-btn">
+            <a href="https://drive.google.com/drive/folders/1nSak0B84gswGCCA2BROY2cdKJLSVRZ2o?usp=sharing">More</a>
+        </div>
+    </div>
 </section>
 
 <section class="contact" id="contact">
@@ -120,7 +140,7 @@
     <div class="contact-info">
         <i class='bx bx-envelope'><p><a href="mailto:zhichang.liu.michael@outlook.com">zhichang.liu.michael@outlook.com</a></p></i>
         
-        <i class='bx bx-phone' ><p>+1 (902)- 430 - 7963</p></i>        
+        <i class='bx bx-phone' ><p>+1 (902) - 430 - 7963</p></i>        
     </div>
 </section>
 
